--- a/views/penrose/checkout.html
+++ b/views/penrose/checkout.html
@@ -16,5 +16,5 @@
 		</div>
 
 		<br><br><br><br>
-		<a class="view-cart-button" href="javascript:void(0)" onclick="buildCart();">&lt;&lt;Back</a>&nbsp;&nbsp;&nbsp;
+		<a class="view-cart-button" href="javascript:void(0)" onclick="getCart();">&lt;&lt;Back</a>&nbsp;&nbsp;&nbsp;
 		<a class="view-cart-button" href="javascript:void(0)" onclick="submitOrder();">Place Order</a>
