--- a/views/penrose/order.html
+++ b/views/penrose/order.html
@@ -1,5 +1,5 @@
 <div id="order-div">
-	<table id="order-table"> 
+	<table id="products-table" class="table"> 
 		<thead>
 	   		<tr>
 			   	<th>Beer</th>
@@ -7,17 +7,20 @@
 	   			<th>Unit</th>
 	   			<th>Price</th>
 	   			<th>Quantity</th>
+	   			<th class="hidden"></th>
+	   			<th class="hidden"></th>
 	   		</tr>
 	   	</thead>
 	   	<tbody>
 	   		{{#product_units}}
 	   		<tr>
-				<td id="product_{{product_id}}">{{product_code}}</td>
-	   			<td id="desc_{{product_id}}">{{product_description}}</td>
-	   			<td id="unit_{{product_id}}">{{unit_description}}</td>
-	   			<td id="price_{{product_id}}">${{price}}</td>
-	   			<td><input class="order-quantity" id="order_{{product_id}}" onblur="validateQuantity(this)" type="text"/></td>
-	   			<td class="hidden" id="unit_id_{{product_id}}">{{unit_id}}</td>
+				<td id="product_{{product_unit_id}}">{{product_code}}</td>
+	   			<td id="desc_{{product_unit_id}}">{{product_description}}</td>
+	   			<td id="unit_{{product_unit_id}}">{{unit_description}}</td>
+	   			<td id="price_{{product_unit_id}}">${{price}}</td>
+	   			<td><input class="order-quantity" id="order_{{product_unit_id}}" onblur="validateQuantity(this)" type="text"/></td>
+	   			<td class="hidden" id="unit_id_{{product_unit_id}}">{{unit_id}}</td>
+	   			<td class="hidden" id="product_id_{{product_unit_id}}">{{product_id}}</td>
 	   		</tr>
 	   		{{/product_units}}
 		</tbody>
@@ -29,5 +32,5 @@
 <a class="view-cart-button" href="javascript:void(0)" onclick="buildCart();">View Cart >></a>
 
 <script type="text/javascript">
-	displayTable("order-table");
+	//displayTable("order-table");
 </script>
