--- a/views/penrose/order_detail.html
+++ b/views/penrose/order_detail.html
@@ -6,7 +6,7 @@
 	<h4>Order #{{id}}</h4><br>
 	<p>{{delivery_method}} {{delivery_date}}</p>
 
-	<table id="order-table"> 
+	<table id="order-detail-table" class="table"> 
 		<thead>
 			<tr>
 				<th>Beer</th>
@@ -34,7 +34,7 @@
 	</div>
 
 	<script type="text/javascript">
-      displayTable("order-table");
+      //displayTable("order-table");
    </script>
 
 
