--- a/views/penrose/confirmation.html
+++ b/views/penrose/confirmation.html
@@ -6,6 +6,6 @@
 </div>
 
    	<br><br><br><br>
-	<a class="view-cart-button" href="javascript:void(0)" onclick="showLandingPage()">Home</a>
+	<a class="view-cart-button" href="javascript:void(0)" onclick="getOpenOrders()">View Orders</a>
 
 
