--- a/views/penrose/order.html
+++ b/views/penrose/order.html
@@ -1,36 +1,33 @@
-<div id="order-div">
-	<table id="products-table" class="table"> 
-		<thead>
-	   		<tr>
-			   	<th>Beer</th>
-	   			<th>Type</th>
-	   			<th>Unit</th>
-	   			<th>Price</th>
-	   			<th>Quantity</th>
-	   			<th class="hidden"></th>
-	   			<th class="hidden"></th>
-	   		</tr>
-	   	</thead>
-	   	<tbody>
-	   		{{#product_units}}
-	   		<tr>
-				<td id="product_{{product_unit_id}}">{{product_code}}</td>
-	   			<td id="desc_{{product_unit_id}}">{{product_description}}</td>
-	   			<td id="unit_{{product_unit_id}}">{{unit_description}}</td>
-	   			<td id="price_{{product_unit_id}}">${{price}}</td>
-	   			<td><input class="order-quantity" id="order_{{product_unit_id}}" onblur="validateQuantity(this)" type="text"/></td>
-	   			<td class="hidden" id="unit_id_{{product_unit_id}}">{{unit_id}}</td>
-	   			<td class="hidden" id="product_id_{{product_unit_id}}">{{product_id}}</td>
-	   		</tr>
-	   		{{/product_units}}
-		</tbody>
-	</table>
+<table id="products-table" class="table"> 
+	<thead>
+   		<tr>
+		   	<th>Beer</th>
+   			<th>Type</th>
+   			<th>Unit</th>
+   			<th class="dt-body-right">Price</th>
+   			<th class="dt-center">Quantity</th>
+   			<th class="hidden"></th>
+   			<th class="hidden"></th>
+   		</tr>
+   	</thead>
+   	<tbody>
+   		{{#product_units}}
+   		<tr>
+			<td id="product_{{product_unit_id}}">{{product_code}}</td>
+   			<td id="desc_{{product_unit_id}}">{{product_description}}</td>
+   			<td id="unit_{{product_unit_id}}">{{unit_description}}</td>
+   			<td id="price_{{product_unit_id}}" class="price">${{price}}</td>
+   			<td align="center"><input class="quantity-field" id="order_{{product_unit_id}}" onblur="validateQuantity(this)" type="text"/></td>
+   			<td class="hidden" id="unit_id_{{product_unit_id}}">{{unit_id}}</td>
+   			<td class="hidden" id="product_id_{{product_unit_id}}">{{product_id}}</td>
+   		</tr>
+   		{{/product_units}}
+	</tbody>
+</table>
+
+<!-- spacing -->
+<div class="col-xs-12">&nbsp;</div>
+
+<div class="col-xs-12">
+	<a class="btn btn-primary" href="javascript:void(0)" onclick="buildCart();">View Cart</a>
 </div>
-
-<br><br><br><br>
-		
-<a class="view-cart-button" href="javascript:void(0)" onclick="buildCart();">View Cart >></a>
-
-<script type="text/javascript">
-	//displayTable("order-table");
-</script>
