--- a/views/penrose/confirmation.html
+++ b/views/penrose/confirmation.html
@@ -1,11 +1,9 @@
-<div id="confirmation">
-
-	<br><br>
-   	<p>{{message}}</p>
-
+<div class="alert alert-success col-xs-6">
+	<p>{{message}}</p>
 </div>
 
-   	<br><br><br><br>
-	<a class="view-cart-button" href="javascript:void(0)" onclick="getOpenOrders()">View Orders</a>
+<div class="col-xs-12">
+	<a class="btn btn-primary" href="javascript:void(0)" onclick="getOpenOrders()">View Orders</a>
+</div>
 
 
