--- a/views/penrose/delivery_date.html
+++ b/views/penrose/delivery_date.html
@@ -1,33 +1,54 @@
-<div id="login-forms">
-	<label for="delivery-date">Delivery Date</label>
-	<select dropdown name="delivery-date" id="delivery-date">
-    	{{#each delivery_dates}}
-       	<option value="{{value}}">{{title}}</option>
-    	{{/each}}
-	</select>
+<form role="form">
+	<div class="form-group col-xs-12">
+		<div class="col-xs-4">
+			<label class="pull-right" for="delivery-date">Delivery Date</label>
+		</div>
+		<div class="col-xs-2">
+			<select dropdown name="delivery-date" id="delivery-date">
+		    	{{#each delivery_dates}}
+       			<option value="{{value}}">{{title}}</option>
+    			{{/each}}
+			</select>
+		</div>
+	</div>
 
-	<br><br><br>
-		
-	<label for="delivery-method">Method</label>
-	<select dropdown name="delivery-method" id="delivery-method">
-    	{{#each delivery_methods}}
-       	<option value="{{value}}">{{title}}</option>
-    	{{/each}}
-	</select>
+	<div class="form-group col-xs-12">
+		<div class="col-xs-4">
+			<label class="pull-right" for="delivery-method">Method</label>
+		</div>
+		<div class="col-xs-2">
+			<select dropdown name="delivery-method" id="delivery-method">
+		    	{{#each delivery_methods}}
+       			<option value="{{value}}">{{title}}</option>
+    			{{/each}}
+			</select>
+		</div>
+	</div>
 
-	<br><br><br>
-		
-	<label for="location">Location</label>
-	<select dropdown id="location" name="location">
-		{{#each warehouses}}
-		<option value="{{value}}">{{title}}</option>
-		{{/each}}
-	</select>
-		
-	<br><br><br><br><br>
-		
-	<a class="continue-button" href="javascript:void(0)" onclick="buildCartHeader();">Continue >></a>
-</div>
+	<div class="form-group col-xs-12">		
+		<div class="col-xs-4">
+			<label class="pull-right" for="location">Location</label>
+		</div>
+		<div class="col-xs-2">
+			<select dropdown id="location" name="location">
+				{{#each warehouses}}
+				<option value="{{value}}">{{title}}</option>
+				{{/each}}
+			</select>
+		</div>
+	</div>
+
+	<!-- spacing -->
+	<div class="col-xs-4">
+	</div>
+
+	<div class="col-xs-2">
+		<a class="btn btn-primary" href="javascript:void(0)" onclick="buildCartHeader();">Continue >></a>
+	</div>
+</form>
+
+
+
 
 
 
