--- a/views/penrose/order_detail.html
+++ b/views/penrose/order_detail.html
@@ -1,40 +1,43 @@
+<a class="btn btn-primary" href="javascript:void(0)" onclick="getOpenOrders();" align="left">Back</a>
 
-	<div style="width: 10%; align:left;">
-		<a class="back-button" href="javascript:void(0)" onclick="getOpenOrders();" align="left">&lt;&lt; Back</a>
-	</div>
+<h4>Order #{{order_id}}</h4><br>
+<p class="text-center">{{delivery_method}} on {{delivery_date}}</p>	
 
-	<h4>Order #{{id}}</h4><br>
-	<p>{{delivery_method}} {{delivery_date}}</p>
+<table id="order-detail-table" class="table"> 
+	<thead>
+		<tr>
+			<th>Beer</th>
+			<th>Type</th>
+			<th>Unit</th>
+			<th>Price</th>
+			<th>Quantity</th>
+		</tr>
+	</thead>
+	<tbody>
+		{{#each lines}}
+		<tr>
+			<td>{{product_code}}</td>
+			<td>{{product_description}}</td>
+			<td>{{unit_description}}</td>
+			<td class="price">${{unit_price}}</td>
+			<td class="quantity">{{quantity}}</td>
+		</tr>
+		{{else}}
+			<div class="col-xs-12 alert alert-danger">
+				<p>This order does not contain any lines yet!</p>
+			</div>
+		{{/each}}
+	</tbody>
+</table>
 
-	<table id="order-detail-table" class="table"> 
-		<thead>
-			<tr>
-				<th>Beer</th>
-				<th>Type</th>
-				<th>Unit</th>
-				<th>Price</th>
-				<th>Quantity</th>
-			</tr>
-		</thead>
-		<tbody>
-			{{#order_details}}
-			<tr>
-				<td>{{product_code}}</td>
-				<td>{{product_description}}</td>
-				<td>{{unit_code}}</td>
-				<td>${{price}}</td>
-				<td>{{quantity}}</td>
-			</tr>
-			{{/order_details}}
-		</tbody>
-	</table>
+<!-- spacing -->
+<div class="col-xs-12">&nbsp;</div>
 
-	<div class="total" align="right">
-		<p><b>Total: ${{order_total}}</b><p>
-	</div>
+<div class="col-xs-4 col-md-2 pull-right">
+	<hr>
+	<p class="order-total"><b>Total: $<span id="total-price">{{total_price}}</span></b><p>
+</div>
 
-	<script type="text/javascript">
-      //displayTable("order-table");
-   </script>
+
 
 
