--- a/views/penrose/update_info.html
+++ b/views/penrose/update_info.html
@@ -1,22 +1,35 @@
+<form role="form" class="col-xs-6">
+	
+	<div class="col-xs-12">
+		<div class="form-group pull-right">
+			<label for="username" >Username</label>
+			<input type="text" id="username" />
+		</div>		
+	</div>
+	
+	<div class="col-xs-12">
+		<div class="form-group pull-right">				
+			<label for="password" >Password</label>
+			<input type="password" id="password" />
+		</div>	
+	</div>
 
-		<label for="username" >Username</label>
-		<input type="text" id="username" />
-		
-		<br>
-						
-		<label for="password" >Password</label>
-		<input type="password" id="password" />
-		
-		<br>
+	<div class="col-xs-12">
+		<div class="form-group pull-right">
+			<label for="password2">Re-type</label>
+			<input type="password" id="password2" onblur="comparePasswords(this)"/>
+		</div>
+	</div>
+	
+	<div class="col-xs-12">
+		<div class="form-group pull-right">
+			<label for="email">Email</label>
+			<input type="text" id="email" onblur="validateEmail(this)"/>
+		</div>
+	</div>
+	
+	<div class="col-xs-10">
+		<a class="btn btn-primary pull-right" href="javascript:void(0)" onclick="updateCustomerInfo();">Submit</a>
+	</div>
 
-		<label for="password2" style="margin-right:1%;">Re-type</label>
-		<input type="password" id="password2" onblur="comparePasswords(this)"/>
-		
-		<br>
-
-		<label for="email" style="margin-right:2%;">Email</label>
-		<input type="text" id="email" onblur="validateEmail(this)"/>
-
-		<br><br><br><br>
-		
-		<a class="view-cart-button" href="javascript:void(0)" onclick="updateCustomerInfo();">Submit</a>
+</form>
