--- a/views/penrose/index.html
+++ b/views/penrose/index.html
@@ -31,18 +31,6 @@
 <link rel="stylesheet" href="css/styles.css">
 
 
-<!-- TYPEKIT -->
-<!-- ////////////////////////////////////////// --> 
-<script type="text/javascript" src="//use.typekit.net/xeh2zrw.js"></script>
-<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
-
-
-<!-- MODERNIZER -->
-<!-- ////////////////////////////////////////// --> 
-<script src="js/modernizr-2.6.1.min.js"></script>
-
-
-
 	</head>
 
 	<body class="beer beer-landing">
@@ -115,6 +103,8 @@
 			<div class="container"> 
 
                 <div id="error-message" class="col-xs-12 alert alert-danger hidden"></div>
+
+                <div id="warning-message" class="col-xs-12 alert alert-warning hidden"></div>
 
 				<div id="main-content" class="col-xs-12">
                     <form role="form" class="col-xs-6 text-center">
