Modified submit_order request data

--- a/views/penrose/checkout.html
+++ b/views/penrose/checkout.html
@@ -1,12 +1,12 @@
 <form role="form" class="col-xs-12 text-center">
 	<div class="form-group">
 		<label for="email">Confirmation email:</label>
-		<input type="text" name="email" onblur="validateEmail(this)" />
+		<input type="text" name="email" onblur="validateEmail(this)" id="email"/>
 	</div>
 
 	<div class="form-group">
 		<label for="comments">Order comments:</label>
-		<textarea rows="6" columns="150"></textarea>
+		<textarea rows="6" columns="150" id="comments" name="comments"></textarea>
 	</div>
 
 	<!-- spacing -->
