Converted success messages to alerts

--- a/views/penrose/css/styles.css
+++ b/views/penrose/css/styles.css
@@ -39,11 +39,13 @@ textarea {
 	}
 }
 
+/*
 @media screen and (min-width: 1000px) {
 	textarea {
 		width: 20%;
 	}
 }
+*/
 
 ul li {
 	display: inline;
