--- a/views/penrose/index.html
+++ b/views/penrose/index.html
@@ -103,8 +103,9 @@
 			<div class="container"> 
 
                 <div id="error-message" class="col-xs-12 alert alert-danger hidden"></div>
-
                 <div id="warning-message" class="col-xs-12 alert alert-warning hidden"></div>
+                <div id="info-message" class="col-xs-12 alert alert-info hidden"></div>
+                <div id="success-message" class="col-xs-12 alert alert-success hidden"></div>
 
 				<div id="main-content" class="col-xs-12">
                     <form role="form" class="col-xs-6 text-center">
