--- a/views/penrose/forgot_password.html
+++ b/views/penrose/forgot_password.html
@@ -1,10 +1,23 @@
+<div class="col-xs-12">
+	<p>Enter your email below and we will email you instructions to set a new password.</p>
 
-		<p>Enter your email below and we will email you instructions to set a new password.</p>
-		<br>
-		<label for="email" style="margin-right:2%;">Email</label>
-		<input type="text" id="email" onblur="validateEmail(this)"/>
+	<form role="form">
+		<div class="form-group">
+			<div class="col-xs-1">
+				<label for="email">Email</label>
+			</div>
+			<input type="text" id="email" onblur="validateEmail(this)"/>
+		</div>
 
-		<br><br><br><br>
-		<a class="view-cart-button" href="password_confirmation.html">Submit</a>
+		<!-- spacing -->
+		<div class="col-xs-12">&nbsp;</div>
+		<div class="col-xs-1">&nbsp;</div>
+
+		<a class="btn btn-primary" href="javascript:void(0)" onclick="location.reload()">Back</a>
+		<a class="btn btn-primary" href="javascript:void(0)" onclick="forgotPasswordSubmit();">Submit</a>
+	</form>
+</div>
+
+
 
 								
