--- a/views/penrose/index.html
+++ b/views/penrose/index.html
@@ -50,12 +50,12 @@
         <a href="#menu-main" class="nav-mobile-toggle menu-trigger">Menu</a>
         <nav id="nav-main" class="nav-main nav-header col-xs-12">
             <ul>
-                <li class="nav-link col-xs-1"><a href="javascript:void(0)">&nbsp;</a></li>
-                <li class="nav-link col-xs-2"><a href="javascript:void(0)" onclick="getDeliveryOptions();">Place Order</a></li>
-                <li class="nav-link col-xs-2"><a href="javascript:void(0)" onclick="getOpenOrders();">View Orders</a></li>
-                <li class="nav-link col-xs-2"><a href="javascript:void(0)">&nbsp;</a></li>
-                <li class="nav-link col-xs-2"><a href="javascript:void(0)" onclick="getCustomerInfoForm();">Update Info</a></li>
-                <li class="nav-link col-xs-2"><a href="index.html">Log Out</a></li>
+                <li class="nav-link col-xs-1 hidden"><a href="javascript:void(0)">&nbsp;</a></li>
+                <li class="nav-link col-xs-2 hidden"><a href="javascript:void(0)" onclick="getDeliveryOptions();">Place Order</a></li>
+                <li class="nav-link col-xs-2 hidden"><a href="javascript:void(0)" onclick="getOpenOrders();">View Orders</a></li>
+                <li class="nav-link col-xs-2 hidden"><a href="javascript:void(0)">&nbsp;</a></li>
+                <li class="nav-link col-xs-2 hidden"><a href="javascript:void(0)" onclick="getCustomerInfoForm();">Update Info</a></li>
+                <li class="nav-link col-xs-2 hidden"><a href="javascript:void(0)" onclick="location.reload();">Log Out</a></li>
             </ul>
         </nav>
     </div>   
@@ -119,7 +119,7 @@
                         </div>
 
                         <div class="col-xs-12">
-                            <a class="link" href="forgot_password.html">Forgot password</a>
+                            <a class="link" href="javascript:void(0)" onclick="forgotPassword();">Forgot password</a>
                         </div>
 
                         <br><br>
@@ -202,7 +202,6 @@
             }
 
             $(document).ready(function () {
-                hideNavLinks();
             	$('#main-content').bind('DOMNodeInserted', showTables);
     		});
         </script>
