--- a/views/penrose/checkout.html
+++ b/views/penrose/checkout.html
@@ -1,18 +1,27 @@
-<form role="form" class="col-xs-12 text-center">
-	<div class="form-group">
-		<label for="email">Confirmation email:</label>
-		<input type="text" name="email" onblur="validateEmail(this)" id="email"/>
+<form role="form">
+	<div class="form-group col-xs-12">
+		<div class="col-xs-4">
+			<label class="pull-right" for="email">Confirmation Email:</label>
+		</div>
+		<div class="col-xs-4">
+			<input type="text" name="email" onblur="validateEmail(this)" id="email"/>
+		</div>
 	</div>
 
-	<div class="form-group">
-		<label for="comments">Order comments:</label>
-		<textarea rows="6" columns="150" id="comments" name="comments"></textarea>
+	<div class="form-group col-xs-12">
+		<div class="col-xs-4">
+			<label class="pull-right" for="delivery-method">Order Comments:</label>
+		</div>
+		<div class="col-xs-8">
+			<textarea rows="6" id="comments" name="comments"></textarea>
+		</div>
 	</div>
 
 	<!-- spacing -->
 	<div class="col-xs-12">&nbsp;</div>
-	
-	<div class="col-xs-12">
+	<div class="col-xs-4">&nbsp;</div>
+
+	<div class="col-xs-6">
 		<a class="btn btn-primary" href="javascript:void(0)" onclick="getCart();">Back</a>
 		<a class="btn btn-primary" href="javascript:void(0)" onclick="submitOrder();">Place Order</a>
 	</div>
