--- a/views/penrose/update_info.html
+++ b/views/penrose/update_info.html
@@ -16,7 +16,7 @@
 
 	<div class="col-xs-12">
 		<div class="form-group pull-right">
-			<label for="password2">Re-type</label>
+			<label for="password2">Re-type Password</label>
 			<input type="password" id="password2" onblur="comparePasswords(this)"/>
 		</div>
 	</div>
