--- a/views/penrose/open_orders.html
+++ b/views/penrose/open_orders.html
@@ -1,4 +1,4 @@
-<table id="orders-table" class="table"> 
+<table id="orders-table" class="dtable"> 
    <thead>
   	   <tr>
   		   <th>Order Number</th>
