--- a/views/penrose/order_detail.html
+++ b/views/penrose/order_detail.html
@@ -3,7 +3,7 @@
 <h4>Order #{{order_id}}</h4><br>
 <p class="text-center">{{delivery_method}} on {{delivery_date}}</p>	
 
-<table id="order-detail-table" class="table"> 
+<table id="order-detail-table" class="dtable"> 
 	<thead>
 		<tr>
 			<th>Beer</th>
