--- a/views/penrose/forgot_password.html
+++ b/views/penrose/forgot_password.html
@@ -13,7 +13,7 @@
 		<div class="col-xs-12">&nbsp;</div>
 		<div class="col-xs-1">&nbsp;</div>
 
-		<a class="btn btn-primary" href="javascript:void(0)" onclick="location.reload()">Back</a>
+		<a class="btn btn-primary" href="javascript:void(0)" onclick="logout();">Back</a>
 		<a class="btn btn-primary" href="javascript:void(0)" onclick="forgotPasswordSubmit();">Submit</a>
 	</form>
 </div>
