--- a/views/penrose/confirmation.html
+++ b/views/penrose/confirmation.html
@@ -1,3 +1,6 @@
+<div id="success-message" class="col-xs-12 alert alert-success">Thank you-your order has been placed!</div>
+<div class="col-xs-12">&nbsp;</div>
+
 <h4>Order #{{order_id}}</h4><br>
 <p class="text-center">{{delivery_method}} on {{delivery_date}}</p>	
 
