--- a/views/penrose/confirmation.html
+++ b/views/penrose/confirmation.html
@@ -23,7 +23,7 @@
 
 <div class="col-xs-12 col-lg-6">
 	<div class="panel panel-default">
-		<div class="panel-heading">Bill</div>
+		<div class="panel-heading">Bill To</div>
 		<div class="panel-body">
 			<p>{{bill_to_name}}</p>
 			<p>{{bill_to_addr1}}</p>
